<resources>
    <string name="original_app_name">Group7_MAPD711_Assignment4</string>

    <string name="app_name">Luxury cruise ship</string>

    <string name="intro">Register or login to start using the system.</string>

    <string name="agreement">Agree with Terms and policy</string>


    <string name="bahamas">Bahamas Cruise</string>
    <string name="caribbean">Caribbean Cruise</string>
    <string name="cuba">Cuba Cruise</string>
    <string name="sampler">Sampler Cruise</string>
    <string name="star">Star Cruise</string>


    <string name="visiting_places">Visiting places:</string>
    <string name="cruise_price">Cruise price:</string>
    <string name="duration">duration(number of nights):</string>
    <string name="image">image</string>

    <string name="place_prefix">Visiting places: </string>
    <string name="price_prefix">Price: </string>
    <string name="price_suffix">$</string>
    <string name="duration_prefix">Duration (number of nights): </string>

    <string name="visiting_places_bahamas">Atlantis Paradise Island</string>
    <string name="cruise_price_bahamas">6666</string>
    <string name="duration_bahamas">6</string>

    <string name="visiting_places_caribbean">Caribbean</string>
    <string name="cruise_price_caribbean">777</string>
    <string name="duration_caribbean">7</string>

    <string name="visiting_places_cuba">Cuba</string>
    <string name="cruise_price_cuba">8888</string>
    <string name="duration_cuba">8</string>

    <string name="visiting_places_sampler">Sampler</string>
    <string name="cruise_price_sampler">9999</string>
    <string name="duration_sampler">9</string>

    <string name="visiting_places_star">Star</string>
    <string name="cruise_price_star">5555</string>
    <string name="duration_star">5</string>

    <string name="adults_number">Number of adults:</string>
    <string name="children_number">Number of children:</string>

    <string name="profile_information">Profile Information</string>
    <string name="update_profile_information">Update Profile Information</string>

    <string name="group_information">Is anyone travelling over the age of 60?</string>

    <string name="small_description">Finding the right cruise deal that is right for you is our goal. Search by the river you are interested in and then filter down by when you want to go. Make sure to look through our current offers and deals and select the ones you are interested in...it’s that easy.</string>
    <string name="checkbox_text">Please select the checkbox and continue to next screen</string>
    <string name="member_description">Please select the number of adults and children</string>
    <string name="btn_submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Booking Information -->
    <string name="booking_information">Booking Information</string>
    <string name="update_booking_information">Update Booking Information</string>
    <string name="btn_booking_information">Booking Information</string>
    <string name="cruise_code">Cruise Code:</string>
    <string name="number_of_adults">Number Of Adults:</string>
    <string name="number_of_kids">Number Of Kids:</string>
    <string name="number_of_seniors">Number Of Seniors:</string>
    <string name="amount_paid">Amount Paid:</string>
    <string name="start_date">Start Date:</string>
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_cancel_booking">Cancel Booking</string>
    <string name="btn_booking_list">Booking List</string>
    <string name="cd_play_icon">Play music icon</string>
    <string name="cd_stop_icon">Stop music icon</string>
    <string name="song_name">Get song name</string>
    <string name="service_is_not_bound">Service isn\'t bound</string>
    <string name="unknown">Unknown</string>
    <string name="music_started">Music started</string>
    <string name="music_stopped">Music stopped</string>
    <string name="songs_shuffled">Songs shuffled</string>
</resources>