<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5pt"
    tools:context=".BookingInformationActivity">
    <TextView
        android:layout_gravity="center"
        android:layout_marginBottom="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titleFontSize"
        android:text="@string/booking_information" />

    <!-- Body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50px"
        android:paddingLeft="50px"
        android:paddingRight="50px">

        <TextView
            android:id="@+id/lblCruiseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cruise_code"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCruiseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100px"
            android:ems="10"
            android:textSize="@dimen/updateBookingFontSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50px"
        android:paddingLeft="50px"
        android:paddingRight="50px">

        <TextView
            android:id="@+id/lblNoOfAdults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_adults"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNoOfAdults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100px"
            android:ems="10"
            android:textSize="@dimen/updateBookingFontSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50px"
        android:paddingLeft="50px"
        android:paddingRight="50px">

        <TextView
            android:id="@+id/lblNoOfKids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_kids"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNoOfKids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100px"
            android:ems="10"
            android:textSize="@dimen/updateBookingFontSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50px"
        android:paddingLeft="50px"
        android:paddingRight="50px">

        <TextView
            android:id="@+id/lblNoOfSeniors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_seniors"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNoOfSeniors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100px"
            android:ems="10"
            android:textSize="@dimen/updateBookingFontSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50px"
        android:paddingLeft="50px"
        android:paddingRight="50px">

        <TextView
            android:id="@+id/lblAmountPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_paid"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvAmountPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100px"
            android:ems="10"
            android:textSize="@dimen/updateBookingFontSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50px"
        android:paddingLeft="50px"
        android:paddingRight="50px">

        <TextView
            android:id="@+id/lblStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100px"
            android:ems="10"
            android:textSize="@dimen/updateBookingFontSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="50px"
        android:paddingLeft="50px"
        android:paddingRight="50px">
        <Button
            android:layout_gravity="center"
            android:id="@+id/button_cancel_booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/buttonFontSize"
            android:text="@string/btn_cancel_booking"/>
        <Button
            android:layout_marginLeft="20px"
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/buttonFontSize"
            android:text="@string/btn_update"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="50px"
        android:paddingLeft="50px"
        android:paddingRight="50px">
        <Button
            android:layout_marginLeft="20px"
            android:id="@+id/button_back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/buttonFontSize"
            android:text="@string/btn_booking_list"/>
    </LinearLayout>

</LinearLayout>