<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.SamplerFragment">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5pt"
        >
        <TableRow
            android:minHeight="100px">
            <TextView android:text="Name: " />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/normalFontSize"
                android:text="@string/sampler" />
        </TableRow>
        <TableRow
            android:minHeight="100px">
            <TextView android:text="Price ($): " />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/normalFontSize"
                android:id="@+id/price"
                android:text="@string/cruise_price_sampler" />
        </TableRow>
        <TableRow
            android:minHeight="100px">
            <TextView android:text="Visiting places: " />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/normalFontSize"
                android:id="@+id/visiting_places"
                android:text="@string/visiting_places_sampler" />
        </TableRow>
        <TableRow
            android:minHeight="100px">
            <TextView android:text="Duration (number of nights): " />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/normalFontSize"
                android:id="@+id/duration"
                android:text="@string/duration_sampler" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="20px"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/sampler"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_description_style"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/checkbox_text"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cruise_type"
            android:text="@string/sampler"/>
    </LinearLayout>

</LinearLayout>