<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5pt"
    tools:context=".GuestsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adults_number"
        android:textSize="@dimen/descriptionFontSize"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adults_spinner"
        android:tooltipText="number of adults"
        android:entries="@array/adults_number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/children_number"
        android:textSize="@dimen/descriptionFontSize"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/children_spinner"
        android:tooltipText="number of children"
        android:entries="@array/children_number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_seniors"
        android:textSize="@dimen/descriptionFontSize"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/senior_spinner"
        android:tooltipText="number of senior"
        android:entries="@array/senior_number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The amount of money you need to pay"
        android:textSize="@dimen/descriptionFontSize"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amountPay"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please select your start Date:"
        android:textSize="@dimen/descriptionFontSize"/>
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:id="@+id/datePicker"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateDisplay"
        android:text=""
        android:textSize="@dimen/descriptionFontSize"/>


    <Button
        android:layout_gravity="center"
        android:id="@+id/guestsSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titleFontSize"
        android:text="@string/btn_submit"/>

</LinearLayout>