<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MusicFragment">

    <LinearLayout
        android:layout_marginLeft="100dp"
        android:layout_marginTop="600dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btnPlayMusic"
            android:layout_width="@dimen/optionsDim"
            android:layout_height="@dimen/optionsDim"
            android:background="@drawable/background_btn_play"
            android:contentDescription="@string/cd_play_icon"
            android:enabled="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btnStopMusic"
            android:layout_width="@dimen/optionsDim"
            android:layout_height="@dimen/optionsDim"
            android:layout_marginStart="@dimen/margin"
            android:background="@drawable/background_btn_stop"
            android:contentDescription="@string/cd_stop_icon"
            android:enabled="false"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnShuffleMusic"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btnShuffleMusic"
            android:layout_width="@dimen/optionsDim"
            android:layout_height="@dimen/optionsDim"
            android:layout_marginStart="@dimen/margin"
            android:background="@drawable/background_btn_shuffle"
            android:contentDescription="@string/cd_stop_icon"
            android:enabled="false"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnStopMusic"
            app:layout_constraintTop_toTopOf="parent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="500dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/btnSongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@android:color/transparent"
            android:padding="@dimen/padding"
            android:text="@string/song_name"
            android:textAlignment="center"
            android:textColor="@color/violet"
            android:textSize="@dimen/smallTextSize"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </LinearLayout>

</FrameLayout>